test/types/enum/sungeun/cast_enum_weird_oor_2.good
cast_enum_weird_oor_2.chpl:2: error: enum cast out of bounds
